@@ -26,7 +26,7 @@ const struct HashEntry WindowTableEntries[] = {
    { 0, 0, 0, 0, 0 },
    { "clearTimeout", Window::ClearTimeout, DontDelete|Function, 1, 0 },
    { "Option", Window::Option, DontDelete|ReadOnly, 0, 0 },
-   { "closed", Window::Closed, DontDelete|ReadOnly, 0, &WindowTableEntries[94] },
+   { "closed", Window::Closed, DontDelete|ReadOnly, 0, &WindowTableEntries[95] },
    { 0, 0, 0, 0, 0 },
    { "event", Window::Event, DontDelete, 0, &WindowTableEntries[104] },
    { "personalbar", Window::Personalbar, DontDelete|ReadOnly, 0, &WindowTableEntries[111] },
@@ -52,12 +52,12 @@ const struct HashEntry WindowTableEntries[] = {
    { "onkeypress", Window::Onkeypress, DontDelete, 0, 0 },
    { "onblur", Window::Onblur, DontDelete, 0, 0 },
    { "addEventListener", Window::AddEventListener, DontDelete|Function, 3, 0 },
-   { "Node", Window::Node, DontDelete, 0, &WindowTableEntries[99] },
+   { "Node", Window::Node, DontDelete, 0, &WindowTableEntries[100] },
    { 0, 0, 0, 0, 0 },
    { "scrollBy", Window::ScrollBy, DontDelete|Function, 2, 0 },
    { "Image", Window::Image, DontDelete|ReadOnly, 0, 0 },
    { "window", Window::_Window, DontDelete|ReadOnly, 0, 0 },
-   { "defaultStatus", Window::DefaultStatus, DontDelete, 0, &WindowTableEntries[95] },
+   { "defaultStatus", Window::DefaultStatus, DontDelete, 0, &WindowTableEntries[96] },
    { "pageXOffset", Window::PageXOffset, DontDelete|ReadOnly, 0, 0 },
    { "pageYOffset", Window::PageYOffset, DontDelete|ReadOnly, 0, &WindowTableEntries[106] },
    { "onmouseout", Window::Onmouseout, DontDelete, 0, 0 },
@@ -69,7 +69,7 @@ const struct HashEntry WindowTableEntries[] = {
    { "prompt", Window::Prompt, DontDelete|Function, 2, &WindowTableEntries[112] },
    { "screenLeft", Window::ScreenLeft, DontDelete|ReadOnly, 0, &WindowTableEntries[110] },
    { "status", Window::Status, DontDelete, 0, 0 },
-   { "location", Window::_Location, DontDelete, 0, &WindowTableEntries[93] },
+   { "location", Window::_Location, DontDelete, 0, &WindowTableEntries[94] },
    { "onmouseover", Window::Onmouseover, DontDelete, 0, &WindowTableEntries[115] },
    { 0, 0, 0, 0, 0 },
    { 0, 0, 0, 0, 0 },
@@ -88,7 +88,7 @@ const struct HashEntry WindowTableEntries[] = {
    { 0, 0, 0, 0, 0 },
    { "Event", Window::EventCtor, DontDelete, 0, 0 },
    { 0, 0, 0, 0, 0 },
-   { "history", Window::_History, DontDelete|ReadOnly, 0, &WindowTableEntries[97] },
+   { "history", Window::_History, DontDelete|ReadOnly, 0, &WindowTableEntries[98] },
    { "defaultstatus", Window::DefaultStatus, DontDelete, 0, 0 },
    { 0, 0, 0, 0, 0 },
    { "top", Window::Top, DontDelete|ReadOnly, 0, &WindowTableEntries[116] },
@@ -108,13 +108,14 @@ const struct HashEntry WindowTableEntries[] = {
    { 0, 0, 0, 0, 0 },
    { "getSelection", Window::GetSelection, DontDelete|Function, 0, &WindowTableEntries[102] },
    { "setTimeout", Window::SetTimeout, DontDelete|Function, 2, 0 },
-   { "moveBy", Window::MoveBy, DontDelete|Function, 2, &WindowTableEntries[98] },
+   { "moveBy", Window::MoveBy, DontDelete|Function, 2, &WindowTableEntries[99] },
    { "DOMException", Window::DOMException, DontDelete, 0, &WindowTableEntries[91] },
    { 0, 0, 0, 0, 0 },
    { "scrollbars", Window::Scrollbars, DontDelete|ReadOnly, 0, &WindowTableEntries[103] },
-   { "Range", Window::Range, DontDelete, 0, &WindowTableEntries[96] },
+   { "Range", Window::Range, DontDelete, 0, &WindowTableEntries[97] },
    { "clientInformation", Window::ClientInformation, DontDelete|ReadOnly, 0, 0 },
-   { "konqueror", Window::_Konqueror, DontDelete|ReadOnly, 0, &WindowTableEntries[100] },
+   { "konqueror", Window::_Konqueror, DontDelete|ReadOnly, 0, &WindowTableEntries[93] },
+   { "screenX", Window::ScreenX, DontDelete|ReadOnly, 0, 0 },
    { "screenTop", Window::ScreenTop, DontDelete|ReadOnly, 0, 0 },
    { "moveTo", Window::MoveTo, DontDelete|Function, 2, &WindowTableEntries[101] },
    { "resizeBy", Window::ResizeBy, DontDelete|Function, 2, &WindowTableEntries[105] },
@@ -122,7 +123,6 @@ const struct HashEntry WindowTableEntries[] = {
    { "self", Window::Self, DontDelete|ReadOnly, 0, 0 },
    { "alert", Window::Alert, DontDelete|Function, 1, 0 },
    { "confirm", Window::Confirm, DontDelete|Function, 1, &WindowTableEntries[114] },
-   { "screenX", Window::ScreenX, DontDelete|ReadOnly, 0, 0 },
    { "focus", Window::Focus, DontDelete|Function, 0, 0 },
    { "close", Window::Close, DontDelete|Function, 0, 0 },
    { "setInterval", Window::SetInterval, DontDelete|Function, 2, 0 },
